--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
-<html lang="en">
+1<!doctype html>
+<2html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>점심 메뉴 추천</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <h1>오늘 뭐 먹지?</h1>
+  <button id="recommend-button">메뉴 추천</button>
+  <div id="menu-recommendation"></div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
