--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-1<!doctype html>
-<2html lang="en">
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>오늘 뭐 먹지?</h1>
-  <button id="recommend-button">메뉴 추천</button>
+  <button id="recommend-button">점심메뉴 추천</button>
   <div id="menu-recommendation"></div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
