--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>오늘 뭐 먹지?</h1>
-  <button id="recommend-button">점심메뉴 추천</button>
-  <div id="menu-recommendation"></div>
+
+  <div class="container">
+    <h1>오늘 뭐 먹지?</h1>
+    <button id="recommend-button">점심메뉴 추천</button>
+    <div id="menu-recommendation"></div>
+  </div>
+
   <script defer type="text/javascript" src="/main.js"></script>
+
+  <section id="contact-form-section">
+    <h2>제휴 문의</h2>
+    <form action="https://formspree.io/f/mreljker" method="POST" id="partnership-form">
+      <label for="name">이름:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">이메일:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">메시지:</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">문의 제출</button>
+    </form>
+  </section>
 </body>
 </html>
