--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>직장인 점심시간 필수 앱</title>
   <meta name="description" content="오늘 뭐 먹을지 고민될 때, 점심값 내기 게임이 필요할 때 사용해보세요! 직장인들의 즐거운 점심시간을 위한 웹사이트입니다.">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
